[tool.pdm]

[project]
name = "srun_utils"
version = "0.1.0"
description = ""
authors = [
    {name = "PG_LoLo", email = "novgosh@yandex.ru"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

